# test-chart

./: .dockerignore  .env  .gitignore  README.md  Readme.md  docker-compose.yml  pyproject.toml  test-chart-0.1.0.tgz
app/: main.py
app/.docker/: Dockerfile
app/ai/: README.md
app/ai/scripts/: __meta__.py  predict.py  train.py
app/ai/scripts/config/: settings.py
app/api/routes/: predict.py
kubernetes/: api-cm0-configmap.yaml  api-deployment.yaml
models/: metadata.json  weights.pt
test-chart/: Chart.yaml  values.yaml
test-chart/templates/: api-cm0-configmap.yaml  api-deployment.yaml  api-service.yaml
