[tool.poetry]
name = "test-task"
version = "0.1.0"
description = "test task to serve model in kubernetes using helm chart"
authors = ["Valerii Platonov <platonov@stem.net.ua>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "~3.10"
torch = "~2.1.2"
numpy = "^1.26.4"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
uvicorn = "0.30.5"
itsdangerous = "2.2.0"

[tool.poetry.group.dev.dependencies]
pydantic-argparse = "^0.9.0"

[tool.poetry.group.test]  # This part can be left out
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "*"
pytest-aio = "^1.9.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "./tests"
addopts = "-v -s"
